Updates on merging